2016-12-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtoc.pl: Fix for new log file format

2016-12-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Fix exit_status for some error

2016-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Debug.swg (_my_warn): Fix for array argument

2016-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (lookup_last_reusable_tape): correctly check
	  pool and label

2016-12-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/make_security_file.c: Fix comment in amanda-security.conf

2016-12-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Use default storage if the
	  tle have no storage

2016-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm (check_amreport): skip_size default
	* installcheck/failure-client-custom-compress-end.pl,
	  installcheck/failure-client-custom-compress-no-exec.pl,
	  installcheck/failure-client-custom-compress-not-found.pl,
	  installcheck/failure-client-custom-compress.pl,
	  installcheck/failure-client-encrypt-end.pl,
	  installcheck/failure-client-encrypt-no-exec.pl,
	  installcheck/failure-client-encrypt-not-found.pl,
	  installcheck/failure-client-encrypt.pl,
	  installcheck/failure-server-custom-compress-end.pl,
	  installcheck/failure-server-encrypt-end.pl:
	  Remove 'sendbackup: size' lines

2016-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (show): Print if the label do not match
	  the labelstr
	* perl/Amanda/Rest/Storages.pm: Set label_match
	* server-src/amtape.pl (inventory): Print if the label do not match
	  the labelstr
	* installcheck/Amanda_Rest_Storages.pl, installcheck/amtape.pl: Fix


2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c, device-src/vfs-device.c,
	  perl/Amanda/Config.swg: Fix warning found by clang
